--- a/src/Style/Header.css
+++ b/src/Style/Header.css
@@ -1,211 +1,206 @@
-
-
 * {
-outline: none;
+  outline: none;
 }
 
-.spacing{
-padding-left: 2.5%;
+.spacing {
+  padding-left: 2.5%;
 }
 
 .page {
-position: fixed;
-width: 100% auto;
-height:100% auto;
-z-index: 1040;
-/* height: 8vh; */
-font-family:'Playfair Display', serif;
-font-weight: 700;
-letter-spacing: 6px;
-color: #212121;
-font-size: 18px;
-background-color: #fefaf6;
+  position: fixed;
+  width: 100% auto;
+  height: 100% auto;
+  z-index: 1040;
+  /* height: 8vh; */
+  font-family: "Playfair Display", serif;
+  font-weight: 700;
+  letter-spacing: 6px;
+  color: #212121;
+  font-size: 18px;
+  background-color: #fefaf6;
 }
 
-header{
-display: flex;
-/* position: fixed; */
+header {
+  display: flex;
+  /* position: fixed; */
 
-width: 100%;
-height: 70px;
-color:#2D3032;
-justify-content: left;
-align-items: center;
--webkit-tap-highlight-color: rgba(0,0,0,0);
+  width: 100%;
+  height: 70px;
+  color: #2d3032;
+  justify-content: left;
+  align-items: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 main {
-padding: 70px 20px 0;
-display: flex;
-flex-direction: column;
-height: 100%;
+  padding: 70px 20px 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 main > div {
-margin: auto;
-max-width: 600px;
+  margin: auto;
+  max-width: 600px;
 }
 
 main h2 span {
-color: #8E8D8A;
+  color: #8e8d8a;
 }
 
 main p {
-line-height: 1.5;
-font-weight: 200;
-margin: 20px 0;
+  line-height: 1.5;
+  font-weight: 200;
+  margin: 20px 0;
 }
 
 main small {
-font-weight: 300;
-color: #888;
+  font-weight: 300;
+  color: #888;
 }
 
 #nav-container {
-position: fixed;
-height: 100vh;
-width: 95%;
-pointer-events: none;
+  position: fixed;
+  height: 100vh;
+  pointer-events: none;
 }
 
 #nav-container .bg {
-position: absolute;
-top: 100%;
-left: 100%;
-width: 0%;
-height: calc(100% - 70px);
-visibility: hidden;
-opacity: 0;
-transition: .3s;
-background: #000;
+  position: absolute;
+  top: 100%;
+  left: 100%;
+  width: 0%;
+  height: calc(100% - 70px);
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.3s;
+  background: #000;
 }
 
 #nav-container:focus-within .bg {
-visibility: visible;
+  visibility: visible;
 
-opacity: .6;
+  opacity: 0.6;
 }
 #nav-container * {
-visibility: visible;
+  visibility: visible;
 }
 
 #nav-container * {
-visibility: visible;
+  visibility: visible;
 }
 
 .button {
-position: fixed;
-display: flex;
-flex-direction: column;
-justify-content: center;
-z-index: 1;
--webkit-appearance: none;
-border: 0;
-background: transparent;
-border-radius: 0;
-height: 70px;
-width: 30px;
-cursor: pointer;
-pointer-events: auto;
-margin-left: 95%;
-touch-action: manipulation;
--webkit-tap-highlight-color: rgba(0,0,0,0);
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  z-index: 1;
+  -webkit-appearance: none;
+  border: 0;
+  background: transparent;
+  border-radius: 0;
+  height: 70px;
+  width: 30px;
+  cursor: pointer;
+  pointer-events: auto;
+  margin-left: 95%;
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-
 .icon-bar {
-display: block;
-width: 70%;
-height: 3px;
-margin: 3px;
-background:#2D3032;
-transition: .3s;
+  display: block;
+  width: 70%;
+  height: 3px;
+  margin: 3px;
+  background: #2d3032;
+  transition: 0.3s;
 }
 
 .icon-bar + .icon-bar {
-margin-top: 5px;
+  margin-top: 5px;
 }
 
 #nav-container:focus-within .button {
-pointer-events: none;
+  pointer-events: none;
 }
 #nav-container:focus-within .icon-bar:nth-of-type(1) {
-transform: translate3d(0,8px,0) rotate(45deg);
+  transform: translate3d(0, 5px, 0) rotate(45deg);
 }
 
 #nav-container:focus-within .icon-bar:nth-of-type(2) {
-transform: translate3d(0,-8px,0) rotate(-45deg);
+  transform: translate3d(0, -6.5px, 0) rotate(-45deg);
 }
-
 #nav-content {
-margin-top: 330px;
-font-family:'Playfair Display', serif;
-width: 100%;
-max-width:100%;
-position: absolute;
-top: 0;
-left: 0;
-height: 100%;
-bottom:0;
-background: #8E8D8A;
-pointer-events: auto;
--webkit-tap-highlight-color: rgba(0,0,0,0);
-transform: translateX(-100%);
-transition: transform .3s;
-will-change: transform;
-contain: paint;
+  margin-top: 330px;
+  font-family: "Playfair Display", serif;
+  width: 100%;
+  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  bottom: 0;
+  background: #8e8d8a;
+  pointer-events: auto;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  transform: translateX(-100%);
+  transition: transform 0.3s;
+  will-change: transform;
+  contain: paint;
 
-/* z-index: 9999; */
+  /* z-index: 9999; */
 }
 
 #nav-content ul {
-margin-top: 10%;
-height: 100%;
-/* display: flex; */
-flex-direction: column;
+  margin-top: 10%;
+  height: 100%;
+  /* display: flex; */
+  flex-direction: column;
 }
 
 #nav-content li a {
-margin:2%;
-font-size: 30px;
-display: block;
-text-transform: uppercase;
-transition: color .1s;
-text-align: center;
+  margin: 2%;
+  font-size: 30px;
+  display: block;
+  text-transform: uppercase;
+  transition: color 0.1s;
+  text-align: center;
 }
 
 #nav-content li a:hover {
-color:white;
-text-decoration: underline;
+  color: white;
+  text-decoration: underline;
 }
 
-
 .small {
-display: flex;
-align-self: center;
+  display: flex;
+  align-self: center;
 }
 
 .small a {
-font-size: 12px;
-font-weight: 400;
-color: #8E8D8A;
+  font-size: 12px;
+  font-weight: 400;
+  color: #8e8d8a;
 }
 .small a + a {
-margin-left: 15px;
+  margin-left: 15px;
 }
 
 #nav-container:focus-within #nav-content {
-transform: none;
+  transform: none;
 }
 
 * {
-box-sizing: border-box;
-margin: 0;
-padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html, body {
-height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 a,
@@ -213,28 +208,29 @@ a:visited,
 a:focus,
 a:active,
 a:link {
-text-decoration: none;
-outline: 0;
+  text-decoration: none;
+  outline: 0;
 }
 
 a {
-color: currentColor;
-transition: .2s ease-in-out;
+  color: currentColor;
+  transition: 0.2s ease-in-out;
 }
 
-h1, h2, h3, h4 {
-margin: 0;
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
 }
 
 ul {
-padding: 0;
-list-style: none;
+  padding: 0;
+  list-style: none;
 }
 
 img {
-vertical-align: middle;
-height: auto;
-width: 100%;
+  vertical-align: middle;
+  height: auto;
+  width: 100%;
 }
-
-
